Added new features
Improved textures
Added layer system
Added new registry type for copycat models
Old registry switched from general to copycat block registry
Optimized and clean code